# src/config/routes.js
@@ -1,4 +1,6 @@
 module.exports = (app) => {
+    app.route('/auth/signin')
+        .post(app.routes.auth.signin);
     app.route('/users')
         .get(app.routes.users.findAll)
         .post(app.routes.users.create);
